force-app/src/objects/fferpcore__ExchangeRateEntry__c.object
<CustomObject>
    <customHelpPage>fferpcore__ExchangeRatesHelp</customHelpPage>
    <description>Stores the exchange rate details for a specific exchange rate group and type.</description>
    <fields>
        <fullName>fferpcore__EndDate__c</fullName>
        <description>The last date that the exchange rate is valid.</description>
        <inlineHelpText>The last date that the exchange rate is valid.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fferpcore__ExchangeRateGroup__c</fullName>
        <description>The group that the exchange rate entry relates to.</description>
        <inlineHelpText>The group that the exchange rate entry relates to.</inlineHelpText>
        <label>Exchange Rate Group</label>
        <referenceTo>fferpcore__ExchangeRateGroup__c</referenceTo>
        <relationshipLabel>Exchange Rate Entries</relationshipLabel>
        <relationshipName>ExchangeRateEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__ExchangeRateType__c</fullName>
        <description>Exchange rate types for use with exchange rates in Foundations. We recommend that you do not delete the managed rate types. For more information, see the Foundations Help.</description>
        <inlineHelpText>Exchange rate types for use with exchange rates in Foundations. We recommend that you do not delete the managed rate types. For more information, see the Foundations Help.</inlineHelpText>
        <label>Exchange Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spot</fullName>
                    <default>true</default>
                    <label>Spot</label>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Translation</fullName>
                </value>
                <value>
                    <fullName>Historical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__RelativeCurrency__c</fullName>
        <description>The default currency for the related group.</description>
        <formula>TEXT(fferpcore__ExchangeRateGroup__r.fferpcore__DefaultCurrency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The default currency for the related group.</inlineHelpText>
        <label>Relative Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__StartDate__c</fullName>
        <description>The first date that the exchange rate is valid.</description>
        <inlineHelpText>The first date that the exchange rate is valid.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <label>Exchange Rate Entry</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__ExchangeRateGroup__c</columns>
        <columns>fferpcore__RelativeCurrency__c</columns>
        <columns>fferpcore__StartDate__c</columns>
        <columns>fferpcore__EndDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ER-{0000000000}</displayFormat>
        <label>Exchange Rate Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Rate Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>